--- a/assets/css/internal.css
+++ b/assets/css/internal.css
@@ -1,15 +1,12 @@
+
 @import url('reset.css');
 @import url('global.css');
-@import url('components/_navigator.css');
-@import url('components/_pills.css');
-@import url('components/_link-button.css');
-@import url('components/_gallery.css');
 
 .s-wrapper {
   display: flex;
   height: 100vh;
   flex-flow: row nowrap; 
-  background-color: aqua; 
+  background-color: gray; 
 }
 
 .s-wrapper video{
@@ -21,14 +18,10 @@
 .s-wrapper .s-left-column {
   width: 100px;
   height: 100%;
+  background-color: black;
   display: flex;
   justify-content: center;
   align-items: center;
-  position: fixed;
-  padding-right: 50px;
-  left: 0;
-  top: 0;
-  z-index: 1;
 }
 
 .s-wrapper .s-main-content{
@@ -36,6 +29,64 @@
   width: 100%;
   padding-left: 130px;
   position: relative;
+}
+
+.navigator {
+  height: 80vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  position: relative;
+}
+
+.navigator::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  width: 2px;
+  height: 100%;
+  background-color: white;
+  z-index: 0;
+}
+
+.navigator ul {
+  z-index: 1;
+}
+
+.navigator ul li a:hover,
+.navigator ul li a.active {
+  color: var(--primary-color);
+  background-color: white;
+}
+
+.navigator .navigator__icon {
+  position: absolute;
+  top: -20px;
+}
+
+.navigator ul li {
+  margin: 60px 0;
+}
+
+.navigator ul li:first-child {
+  margin-top: 0;
+}
+
+.navigator ul li:last-child {
+  margin-bottom: 0;
+}
+
+.navigator ul li a {
+  color: white;
+  border: solid 2px white;
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
+  background-color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .s-wrapper .s-main-content__top {
