--- a/assets/css/internal.css
+++ b/assets/css/internal.css
@@ -1,6 +1,7 @@
 
 @import url('reset.css');
 @import url('global.css');
+@import url('components/_pills.css');
 
 .s-wrapper {
   display: flex;
@@ -18,17 +19,14 @@
 .s-wrapper .s-left-column {
   width: 100px;
   height: 100%;
-  background-color: black;
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-.s-wrapper .s-main-content{
-  height: 100%;
-  width: 100%;
-  padding-left: 130px;
-  position: relative;
+  position: fixed;
+  padding-right: 50px;
+  left: 0;
+  top: 0;
+  z-index: 1;
 }
 
 .navigator {
@@ -89,6 +87,13 @@
   align-items: center;
 }
 
+.s-wrapper .s-main-content{
+  height: 100%;
+  width: 100%;
+  padding-left: 130px;
+  position: relative;
+}
+
 .s-wrapper .s-main-content__top {
   height: 80vh;
   display: flex;
@@ -109,12 +114,32 @@
   margin-bottom: 30px;
 }
 
+.pills ul{
+  display: flex;
+  flex-direction: row;
+}
+
+.pills ul li {
+  background-color: var(--primary-color);
+  color: white;
+  padding: 5px 15px;
+  margin: 0 10px;
+  border-radius: 20px;
+  text-transform: uppercase;
+}
+
+.pills ul li:first-child {
+  margin-left: 0;
+}
+
+
 .s-wrapper .s-main-content__top .s-description{
   background-color: rgba(0,0,0,.7);
   max-width: 50%;
   padding: 20px;
   border-radius: 10px;
 }
+
 
 .s-wrapper .s-main-content__top .s-description .s-description__text p{
   color: white;
@@ -125,6 +150,7 @@
   margin-bottom: 20px;
 }
 
+/*
 .s-wrapper .s-main-content .s-links{
   padding: 20px;
   padding-left: 0;
