--- a/assets/css/internal.css
+++ b/assets/css/internal.css
@@ -2,6 +2,8 @@
 @import url('reset.css');
 @import url('global.css');
 @import url('components/_pills.css');
+@import url('components/_link-button.css');
+@import url('components/_gallery.css');
 
 .s-wrapper {
   display: flex;
@@ -150,17 +152,17 @@
   margin-bottom: 20px;
 }
 
-/*
 .s-wrapper .s-main-content .s-links{
   padding: 20px;
   padding-left: 0;
 }
 
+
 .s-wrapper .s-main-content .s-links ul{
   display: flex;
   flex-direction: row;
 }
-
+/*
 .s-spiderman-01-01 {
   background-image: url('../images/spiderman-tobey/movie-01/background.png');
   background-size:cover;
