--- a/assets/css/internal.css
+++ b/assets/css/internal.css
@@ -174,6 +174,11 @@
   z-index: 1;
 }
 
+.img-fancy {
+  width: 300px;
+  height: 200px;
+}
+
 
 .s-spiderman-01-01 {
   background-image: url('../images/spiderman-tobey/movie-01/background.png');
