--- a/assets/css/media-query.css
+++ b/assets/css/media-query.css
@@ -1,13 +1,23 @@
 /*Mobile*/
 @media screen and (max-width: 500px) {
-    
+
     .s-cards-carousel {
         display: flex;
         justify-content: center;
         width: calc(50vw / 1 - 15%);
         transform-style: preserve-3d ;
         transition: transform 0.4s ease-in;
-      }
+    }
 
-   
+    .s-container .s-cards-carousel  {
+        height: 60vh;
+    }
+
+    .s-cards-carousel a {
+        height: 60vh;
+    }
+    
+    .s-card__background {
+        height: 60vh;
+    }
 }
