--- a/assets/css/media-query.css
+++ b/assets/css/media-query.css
@@ -8,7 +8,7 @@
     .s-cards-carousel {
         display: flex;
         justify-content: center;
-        width: calc(50vw / 1 - 15%);
+        width: calc(50vw / 1 - 23%);
         transform-style: preserve-3d ;
         transition: transform 0.4s ease-in;
     }
@@ -24,4 +24,49 @@
     .s-card__background {
         height: 60vh;
     }
+
+    /* pages */
+    .s-logo img {
+        width: 70%;
+    }
+
+    .s-description {
+        display: none;
+    }
+
+    .gallery  ul{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .gallery  img {
+        width: 300px;
+        height: 170px;
+    }
+}
+
+/* Extra small device*/
+@media screen and (min-width: 501px) and (max-width: 767px) {
+
+   /* index */
+    .s-menu ul li a {
+        font-size: 14px;
+        color: aqua;
+    }
+
+
+    /*pages*/
+    .s-logo img {
+        width: 70%;
+    }
+
+    .s-description {
+        display: none;
+    }
+
+    .gallery  ul{
+        display: flex;
+        flex-direction: column;
+    }
+
 }
