--- a/assets/css/media-query.css
+++ b/assets/css/media-query.css
@@ -1,5 +1,25 @@
 /*Mobile*/
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 375px) {
+    .s-logo img {
+        width: 60%;
+    }
+
+    .s-description {
+        display: none;
+    }
+
+    .gallery  ul{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .gallery  img {
+        width: 200px;
+        height: 170px;
+    }
+}
+
+@media screen and (min-width: 376px) and (max-width: 500px) {
 
     .s-menu ul li a {
         font-size: 14px;
