--- a/assets/css/media-query.css
+++ b/assets/css/media-query.css
@@ -89,6 +89,11 @@
         flex-direction: column;
     }
 
+    .gallery  img {
+        width: 300px;
+        height: 170px;
+    }
+
 }
 
 /*small tabletes*/
